Added Invite link to the Discord BAT Server
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat0221.html
+++ b/src/bat0221.html
@@ -43,7 +43,7 @@
 		<a href="https://vpn.nfsv4.dev/request/">Request To Join</a>.
 		Once a Public Key and ipv6 address are allocated
 		Your host will be able to create an
-		<a href=""https://openvpn.net/>OpenVPN</a>
+		<a href="https://openvpn.net/">OpenVPN</a>
 		to join the network. 
 	</p>
 	<p>
@@ -53,10 +53,14 @@
 
 <h1>Communications</h1>
 	<p>
-		A <a href=""https://discord.com/>Discord</a>
+		A <a href="https://discord.com/">Discord</a>
 		server, called "Bake a Thon", have been created to enable 
 		participants to verbally communicate, with separate
 		channels for different topics.
+	<br>
+		Use the following link to join the server: 
+		<a href="https://discord.gg/mnddcGbqpE">Discord BAT Server</a>
+	</br>
 	</p>
 	<p>
 		Any questions or problems with joining the please contact 
