Updates for February 2021 BAT
Signed-off-by: Bill Baker <Bill.Baker@Oracle.com>

--- a/src/events.html
+++ b/src/events.html
@@ -1,12 +1,16 @@
 <h1> On deck </h1>
-  <li><a href="/Events/2021/Feb/BAT/index.html">May 2021 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
+<br>
+  <li>TBD</li>
+<br>
 <ul>
 </ul>
 
 <h1> Living in past glory </h1>
 
 <ul>
-  <li><a href="/Events/2020/May/BAT/index.html">May 2020 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a><font size="+2">    This event has been cancelled</font>.</li>
+  <li><a href="/Events/2021/Feb/BAT/index.html">February 2021 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
+  <li>October 2020 BAT - This event was cancelled</font>.</li>
+  <li><a href="/Events/2020/May/BAT/index.html">May 2020 BAT</a> - This event was cancelled</font>.</li>
   <li><a href="/Events/2019/Oct/BAT/index.html">October 2019 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
   <li><a href="/Events/2019/May/BAT/index.html">May 2019 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
   <li><a href="/Events/2018/March/BAT/index.html">March 2018 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
