--- a/src/bats/pre_dir1_talks.html
+++ b/src/bats/pre_dir1_talks.html
@@ -45,6 +45,7 @@
 		<a class="cmenulink" href="/Documents/BakeAThon/2014/index.html">2014</a>
 		<a class="cmenulink" href="/Documents/BakeAThon/2017/index.html">2017</a>
 		<a class="cmenulink" href="/Documents/BakeAThon/2018/index.html">2018</a>
+		<a class="cmenulink" href="/Documents/BakeAThon/2021/index.html">2021</a>
 
 	</div>
 
