--- a/src/bats/talks.html
+++ b/src/bats/talks.html
@@ -5,4 +5,5 @@
 		<li><h2> <a href="/Documents/BakeAThon/2014/index.html">2014</a> </h2></li>
 		<li><h2> <a href="/Documents/BakeAThon/2017/index.html">2017</a> </h2></li>
 		<li><h2> <a href="/Documents/BakeAThon/2018/index.html">2018</a> </h2></li>
+		<li><h2> <a href="/Documents/BakeAThon/2021/index.html">2021</a> </h2></li>
 		</ul>
