Add information for Fall 2021 BAT.
Signed-off-by: Bill Baker <Bill.Baker@Oracle.com>

--- a/src/events.html
+++ b/src/events.html
@@ -1,6 +1,6 @@
 <h1> On deck </h1>
 <br>
-  <li>TBD</li>
+  <li><a href="/Events/2021/Oct/BAT/index.html">October 2021 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
 <br>
 <ul>
 </ul>
