--- a/src/bats/2021.html
+++ b/src/bats/2021.html
@@ -1,3 +1,4 @@
+			<tr><td><a href="RPC-with-TLS.pdf">RPC_with_TLS.pdf</a> </td><td>  Chuck Lever, Oracle</td></tr>
 			<tr><td><a href="Basic_NFS_tracepoints.pdf">Basic NFS tracepoints</a> </td><td>  Chuck Lever, Oracle</td></tr>
 			<tr><td><a href="fdr-slides.txt">Flight Data Recorder</a> </td><td>  Bill Baker, Oracle</td></tr>
 			<tr><td><a href="fdr-demo.txt">FDR demo notes</a> </td><td>  Bill Baker, Oracle</td></tr>
