--- a/src/announce.html
+++ b/src/announce.html
@@ -1,4 +1,5 @@
   <ul>
+    <li><a href="/Events/2022/Apr/BAT/index.html">April 2022 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Events/2021/Oct/BAT/index.html">October 2021 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Events/2021/Feb/BAT/index.html">Feb 2021 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Events/2020/May/BAT/index.html">May 2020 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
