--- a/src/bat0422.html
+++ b/src/bat0422.html
@@ -12,11 +12,8 @@
 		</br>
 	</p>
 	<p>
-		Any questions or problems joining the please contact 
-		<a href="mailto:bcodding@redhat.com">Ben Coddington</a>
-		or 
-		<a href="mailto:steved@redhat.com"> Steve Dickson</a>
-		(but mostly Ben ;-) ) 
+		Any questions or problems joining the please send email to 
+		<a href="mailto:bakeathon-contact@googlegroups.com.">BAT Contact</a>
 	</p>
 </li>
 <li>When: <b>April 25th - 29, 2022 </b> (the last week in April)</li>
@@ -29,22 +26,23 @@
 		some of the suggested technologies 
 	</p>
 	<ul>
-		<li>pNFS and NFSv4.1</li>
 		<li>NFSv4.2 features</li>
-		<li>Flex File layouts</li>
+		<li>pNFS with Flex File layouts</li>
 		<li>Kerberized NFS</li>
-		<li>Nconnect</li>
-		<li>iWarp</li>
+		<li>NFS/RDMA on iWarp</li>
 	</ul>
 
 <h1>Registration</h1>
 	<p>
-		To registration simply following the instructions under 
+		To register, simply following the instructions under 
 		<a href="https://vpn.nfsv4.dev/request/">Request To Join</a>.
-		Once a Public Key and ipv6 address are allocated
-		Your host will be able to create an
+		Once a Public Key and IPv6 address are allocated,
+		your host will be able to create an
 		<a href="https://openvpn.net/">OpenVPN</a>
-		to join the network. 
+		tunnel to join the network. 
+	</p>
+	<p>
+		A Wireguard tunnel is also available upon request.
 	</p>
 	<p>
 		The network server information can be found at
@@ -54,23 +52,23 @@
 <h1>Communications</h1>
 	<p>
 		A <a href="https://discord.com/">Discord</a>
-		server, called "Bake a Thon", have been created to enable 
-		participants to verbally communicate, with separate
-		channels for different topics.
+		server, called "Bake a Thon", have been created to 
+		enable attendees to interact via chat, audio, and
+		video while testing. Informal demonstrations and
+		presentations are organized during the afternoons.
 	<br>
 		Use the following link to join the server: 
 		<a href="https://discord.gg/mnddcGbqpE">Discord BAT Server</a>
 	</br>
 	</p>
 	<p>
-		Any questions or problems with joining the please contact 
-		<a href="mailto:ajmitchell@redhat.com">Alice Mitchell</a>
+		Any questions or problems with joining the please send email to
+		<a href="mailto:bakeathon-contact@googlegroups.com.">BAT Contact</a>
 	</p>
 
-<h1>Contacts</h1>
-	<ul>
-	<li><a href="mailto:ajmitchell@redhat.com">Alice Mitchell</a>
-	<li><a href="mailto:bcodding@redhat.com">Ben Coddington</a></li>
-  	<li><a href="mailto:steved@redhat.com">Steve Dickson</a></li>
-	</ul>
+<h1>Questions</h1>
+	<p>
+	Any other question please send email to 
+	<a href="mailto:bakeathon-contact@googlegroups.com.">BAT Contact</a>
+	</p>
 
