Added Westford Regency Inn checkin link.
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1022.html
+++ b/src/bat1022.html
@@ -91,7 +91,8 @@
 <a href="http://westfordregency.com/">Westford Regency Inn</a>
 </h3>
 <ul>
-    <li><b>Address:</b> 219 Littleton RD, Westford, MA 01886 Phone: (978) 692-8200</li>
+   <li><a href=https://us01.iqwebbook.com/WRICCMA543/~/?coupon=R3D<b>Online Block Access Link</b></a></li>
+   <li><b>Address:</b> 219 Littleton RD, Westford, MA 01886 Phone: (978) 692-8200</li>
    <li><b>Red Hat Corporate Rate:</b> $129.00 + Tax </li>
    <li><b>Block Access Code:</b> Red Hat Bakeathon</li>
    <li><b>Block Expires: </b>Fri Aug 12</li>
