--- a/src/bat0423.html
+++ b/src/bat0423.html
@@ -25,7 +25,7 @@
 		some of the suggested technologies 
 	</p>
 	<ul>
-		<li>RPC over TLS</li>
+		<li>RPC with TLS</li>
 		<li>NFSv4.2 features</li>
 		<li>pNFS with Flex File layouts</li>
 		<li>Kerberized NFS</li>
@@ -43,7 +43,7 @@
 	<p>
 	Here are the steps to access the network:
 	</p>
-	</p>
+	<p>
 	<ul>
 		<li>Download the tailscale bits</li>
 			<ul><li>
@@ -62,7 +62,23 @@
 			<ul><li>
 				The command 'tailscale status' will show those machines
 			</li></ul>
+	</p>
+<h1>Server Registration</h1>
 	<p>
+		To register your server please use 
+		<a href=https://docs.google.com/spreadsheets/d/1_BWbwEBqmWGgp1zbWXOILgYTJjowRlhNichNLY_xLqs/edit#gid=0>Server List</a>
+	</p>
+<h1>Client Testing Results</h1>
+	<p>
+		To recorded your client's testing results please use
+		<a href=https://docs.google.com/spreadsheets/d/1_BWbwEBqmWGgp1zbWXOILgYTJjowRlhNichNLY_xLqs/edit#gid=1710898184>Client Test Results</a>
+	</p>
+
+<h1> Talks at 2pm</h1>
+	<p>
+		If anybody is interested in give a talk please sign up at 
+		<a href=https://docs.google.com/spreadsheets/d/1_BWbwEBqmWGgp1zbWXOILgYTJjowRlhNichNLY_xLqs/edit#gid=1920779269> Talks at 2</a>
+	</p>
 
 <h1>Communications</h1>
 	<p>
