--- a/src/announce.html
+++ b/src/announce.html
@@ -1,4 +1,5 @@
   <ul>
+    <li><a href="/Events/2023/Oct/BAT/index.html">Oct 2023 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Events/2023/Apr/BAT/index.html">April 2023 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Events/2022/Oct/BAT/index.html">Oct 2022 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Events/2022/Apr/BAT/index.html">April 2022 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
