Update the hotel info
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1023.html
+++ b/src/bat1023.html
@@ -38,6 +38,9 @@
       <li>Number of attendees from your company w/ email address</li>
 	  <li>Type of equipment you will be bringing (laptop, desktop, etc)</li>
 	</ul>
+	<p>
+	Please register at 
+	<a href=https://docs.google.com/spreadsheets/d/1_Fj9uO5KDaGFWo_XR4O7Lp97godzJLVumOUoB8UAAEs/edit#gid=0>Spring 2024 Registration</a>.
 	</p>
 
    <p>Please let me know if there special power needs. </p>
@@ -140,22 +143,20 @@
    <a href=https://www.google.com/maps/place/Hampton+Inn+%26+Suites+Westford-Chelmsford/@42.573636,-71.417933,17z/data=!3m1!4b1!4m2!3m1!1s0x89e3bd7b53e77a01:0x30ec99fd24efadbc>Google Map</a>
    </li>
 </ul>
-</p>The block expires on <b>Wed Sept 14th</b></p>
-<p>Contact Person:<a href="mailto:Hilary.Smith2@Hilton.com">Hilary Smith</a></p>
+</p>The block expires on <b>Wed Sept 8th</b></p>
+<p>Contact Person:<a href="mailto:Robyn.Hayes@crestlinehotels.com">Robyn Hayes</a></p>
 <h3>
 <a href="http://www.marriott.com/hotels/travel/bosrw-residence-inn-boston-westford/">Residence Inn Marriott</a>
 </h3>
 <ul>
    <li><a href=https://www.marriott.com/events/start.mi?id=1562766838455&key=GRP><b>Online Block Access</b></a></li>
    <li><b>Address:</b>7 Lan Drive  Westford  Massachusetts 01886 Ph: +1-978-392-1407 </li>
-   <li><b>Red Hat Rate:</b> $169.00 + Tax </li>
-   <li><b>Phone Block Access Code:</b>Red Hat Bakeathon</li>
+   <li><b>Rate:</b> $265.00 + Tax </li>
    <li>Free continental breakfast and light dinner </li>
    <li>Closest to the office (0.9)</li>
    <li>Shuttle Bus available to/from the office</li>
 </ul>
-</p>The block expires on <b>Wed Sept 14th</b></p>
-<p>Contact Person:<a href="mailto:Hilary.Smith2@Hilton.com">Hilary Smith</a></p>
+<p>Contact Person:<a href="mailto:Robyn.Hayes@crestlinehotels.com">Robyn Hayes</a></p>
 
 
   <h1>Airports</h1> 
