--- a/src/bat1023.html
+++ b/src/bat1023.html
@@ -122,9 +122,23 @@
   the visitor spots. 
   </p>
 
-  <h1>Lodging</h1>
+<h1>Lodging</h1>
   <h3> Bakeathon Recommended Hotel Information</h3>
 
+<h3>
+<a href="http://westfordregency.com/">Westford Regency Inn</a>
+</h3>
+<ul>
+    <li><b>Address:</b> 219 Littleton RD, Westford, MA 01886 Phone: (978) 692-8200</li>
+	   <li><b>Red Hat Corporate Rate:</b> $129.00 + Tax </li>
+    <li>Updated rooms</li>
+    <li>Shuttle Bus available to/from the Red Office</li>
+    <li>A "steved tested" bar ;-)</li>
+    <li>There is a number of stores with in walking distance </li>
+	<li><a href="https://maps.google.com/maps?saddr=Westford+Regency+Inn+and+Conference+Center,+Littleton+Road,+Westford,+MA&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.742628,-71.41479&sspn=0.693884,1.242828&geocode=FcF4iQIdOg6--yE3UZM6hskxbSlvJnK31JfjiTE3UZM6hskxbQ%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Westford+Regency+Inn&mra=ls&t=m&z=16">Google Map</a></li>
+    </ul> 
+</p>The block expires on <b>Wed Sept 15th</b></p>
+<p>Contact Person:<a href="mailto:<sales@westfordregency.com>">Cindy Martin</a></p>
 <h3>
 <a href=http://www.westfordchelmsfordsuites.hamptoninn.com>Hampton Inn & Suites Westford</a>
 </h3>
@@ -132,7 +146,7 @@
    <li><a href=http://group.hamptoninn.com/RedHatBakeAThon-Oct14<b>Online Block Access Link</b></a></li>
    <li><b>Address:</b> 9 Nixon Road Westford, MA 01886 P:978-392-1555 F:978-392-1566</li>
    <li><b>Red Hat Rate:</b> $169.00 + Tax </li>
-   <li><b>Block Access Code:</b> Red Hat Bakeathon</li>
+   <li><b>Block Access Code:</b>Red Hat Bake-A-Thon</li>
    <li>It is then newest of the three</li>
    <li>Breakfast included</li>
    <li>No bar but there is an 
