Update Hampton Inn access link
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1023.html
+++ b/src/bat1023.html
@@ -143,7 +143,7 @@
 <a href=http://www.westfordchelmsfordsuites.hamptoninn.com>Hampton Inn & Suites Westford</a>
 </h3>
 <ul>
-   <li><a href=http://group.hamptoninn.com/RedHatBakeAThon-Oct14<b>Online Block Access Link</b></a></li>
+   <li><a href=https://www.hilton.com/en/book/reservation/rooms/?ctyhocn=BOSWFHX&arrivalDate=2023-10-09&departureDate=2023-10-13&groupCode=CHHRHB&room1NumAdults=1&cid=OM%2CWW%2CHILTONLINK%2CEN%2CDirectLink<b>Online Block Access Link</b></a></li>
    <li><b>Address:</b> 9 Nixon Road Westford, MA 01886 P:978-392-1555 F:978-392-1566</li>
    <li><b>Red Hat Rate:</b> $169.00 + Tax </li>
    <li><b>Block Access Code:</b>Red Hat Bake-A-Thon</li>
