Fixed a couple typos in announcement page
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1023.html
+++ b/src/bat1023.html
@@ -40,7 +40,7 @@
 	</ul>
 	<p>
 	Please register at 
-	<a href=https://docs.google.com/spreadsheets/d/1_Fj9uO5KDaGFWo_XR4O7Lp97godzJLVumOUoB8UAAEs/edit#gid=0>Spring 2024 Registration</a>.
+	<a href=https://docs.google.com/spreadsheets/d/1_Fj9uO5KDaGFWo_XR4O7Lp97godzJLVumOUoB8UAAEs/edit#gid=0>Fall 2024 Registration</a>.
 	</p>
 
    <p>Please let me know if there special power needs. </p>
@@ -51,7 +51,7 @@
 	connections on the BAT network. 
 	<br> To gain access to the 
 	network please register at
-	<a href=https://docs.google.com/spreadsheets/d/1_Fj9uO5KDaGFWo_XR4O7Lp97godzJLVumOUoB8UAAEs/edit#gid=0>Spring 2024 Registration</a>.
+	<a href=https://docs.google.com/spreadsheets/d/1_Fj9uO5KDaGFWo_XR4O7Lp97godzJLVumOUoB8UAAEs/edit#gid=0>Fall 2024 Registration</a>.
 	</br>
 	<p>
 	Here are the steps to access the remote network:
