--- a/src/bats/pre_dir1_talks.html
+++ b/src/bats/pre_dir1_talks.html
@@ -46,6 +46,7 @@
 		<a class="cmenulink" href="/Documents/BakeAThon/2017/index.html">2017</a>
 		<a class="cmenulink" href="/Documents/BakeAThon/2018/index.html">2018</a>
 		<a class="cmenulink" href="/Documents/BakeAThon/2021/index.html">2021</a>
+		<a class="cmenulink" href="/Documents/BakeAThon/2023/index.html">2023</a>
 
 	</div>
 
