--- a/src/bats/talks.html
+++ b/src/bats/talks.html
@@ -6,4 +6,5 @@
 		<li><h2> <a href="/Documents/BakeAThon/2017/index.html">2017</a> </h2></li>
 		<li><h2> <a href="/Documents/BakeAThon/2018/index.html">2018</a> </h2></li>
 		<li><h2> <a href="/Documents/BakeAThon/2021/index.html">2021</a> </h2></li>
+		<li><h2> <a href="/Documents/BakeAThon/2023/index.html">2023</a> </h2></li>
 		</ul>
