Update Residence Inn booking link
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1024.html
+++ b/src/bat1024.html
@@ -148,7 +148,7 @@
 <a href=https://www.marriott.com/events/start.mi?id=1722877775512&key=GRP>Residence Inn Marriott</a>
 </h3>
 <ul>
-   <li><a href=https://www.marriott.com/events/start.mi?id=1562766838455&key=GRP><b>Online Block Access</b></a></li>
+   <li><a href=https://www.marriott.com/event-reservations/reservation-link.mi?id=1722877775512&key=GRP&app=resvlink><b>Online Block Access</b></a></li>
    <li><b>Address:</b>7 Lan Drive  Westford  Massachusetts 01886 Ph: +1-978-392-1407 </li>
    <li><b>Rate:</b> $169.00 + Tax </li>
    <li>Free continental breakfast and light dinner </li>
