--- a/src/announce.html
+++ b/src/announce.html
@@ -1,4 +1,5 @@
   <ul>
+    <li><a href="/Events/2025/May/BAT/index.html">May 2025 BAT</a> - hosted by <a href="http://www.ooracle.com">Oracle</a>.</li>
     <li><a href="/Events/2024/Oct/BAT/index.html">Oct 2024 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Events/2024/Apr/BAT/index.html">April 2024 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Events/2023/Oct/BAT/index.html">Oct 2023 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
