--- a/src/events.html
+++ b/src/events.html
@@ -1,6 +1,6 @@
 <h1> On deck </h1>
 <br>
-  <li><a href="/Events/2023/Oct/BAT/index.html">Oct 2023 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
+  <li><a href="/Events/2025/May/BAT/index.html">May 2025 BAT</a> - hosted by <a href="http://www.ooracle.com">Oracle</a>.</li>
 <br>
 <ul>
 </ul>
@@ -8,6 +8,10 @@
 <h1> Living in past glory </h1>
 
 <ul>
+    <li><a href="/Events/2025/May/BAT/index.html">May 2025 BAT</a> - hosted by <a href="http://www.ooracle.com">Oracle</a>.</li>
+    <li><a href="/Events/2024/Oct/BAT/index.html">Oct 2024 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
+    <li><a href="/Events/2024/Apr/BAT/index.html">April 2024 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
+    <li><a href="/Events/2023/Oct/BAT/index.html">Oct 2023 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
   <li><a href="/Events/2023/Apr/BAT/index.html">April 2023 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
   <li><a href="/Events/2022/Oct/BAT/index.html">Oct 2022 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
   <li><a href="/Events/2022/Apr/BAT/index.html">April 2022 BAT</a> - virtually hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
